--- a/server/package.json
+++ b/server/package.json
@@ -13,13 +13,21 @@
   "author": "",
   "license": "ISC",
   "devDependencies": {
+    "@types/dotenv": "^8.2.0",
+    "@types/express": "^4.17.13",
     "@types/node": "^16.7.13",
+    "@types/pino": "^6.3.11",
     "@types/puppeteer": "^5.4.4",
     "nodemon": "^2.0.12",
     "ts-node": "^10.2.1",
     "typescript": "^4.4.2"
   },
   "dependencies": {
+    "dayjs": "^1.10.7",
+    "dotenv": "^10.0.0",
+    "express": "^4.17.1",
+    "pino": "^6.13.2",
+    "pino-pretty": "^7.0.0",
     "puppeteer": "^10.2.0"
   }
 }
