--- a/server/package.json
+++ b/server/package.json
@@ -25,6 +25,7 @@
   },
   "dependencies": {
     "@prisma/client": "^3.0.2",
+    "cors": "^2.8.5",
     "dayjs": "^1.10.7",
     "dotenv": "^10.0.0",
     "express": "^4.17.1",
