--- a/client/package.json
+++ b/client/package.json
@@ -12,6 +12,7 @@
     "dayjs": "^1.10.7",
     "next": "11.1.2",
     "react": "17.0.2",
+    "react-date-picker": "^8.3.2",
     "react-dom": "17.0.2"
   },
   "devDependencies": {
