--- a/server/package.json
+++ b/server/package.json
@@ -5,7 +5,7 @@
   "main": "index.js",
   "scripts": {
     "watch": "tsc -w",
-    "dev": "nodemon dist/index.js",
+    "dev": "set NODE_ENV=dev && nodemon dist/index.js",
     "start": "node dist/index.js",
     "start2": "ts-node src/index.ts"
   },
@@ -19,12 +19,12 @@
     "@types/pino": "^6.3.11",
     "@types/puppeteer": "^5.4.4",
     "nodemon": "^2.0.12",
-    "prisma": "^3.0.2",
+    "prisma": "^3.1.1",
     "ts-node": "^10.2.1",
     "typescript": "^4.4.2"
   },
   "dependencies": {
-    "@prisma/client": "^3.0.2",
+    "@prisma/client": "^3.1.1",
     "cors": "^2.8.5",
     "dayjs": "^1.10.7",
     "dotenv": "^10.0.0",
