--- a/server/package.json
+++ b/server/package.json
@@ -16,6 +16,7 @@
     "@types/dotenv": "^8.2.0",
     "@types/express": "^4.17.13",
     "@types/node": "^15.14.9",
+    "@types/node-cron": "^2.0.4",
     "@types/pino": "^6.3.11",
     "@types/puppeteer": "^5.4.4",
     "nodemon": "^2.0.12",
@@ -29,6 +30,7 @@
     "dayjs": "^1.10.7",
     "dotenv": "^10.0.0",
     "express": "^4.17.1",
+    "node-cron": "^3.0.0",
     "pino": "^6.13.2",
     "pino-pretty": "^7.0.0",
     "puppeteer": "^10.2.0"
