--- a/client/package.json
+++ b/client/package.json
@@ -17,6 +17,7 @@
   },
   "devDependencies": {
     "@types/react": "17.0.21",
+    "babel-eslint": "^10.1.0",
     "eslint": "7.32.0",
     "eslint-config-next": "11.1.2",
     "sass": "^1.41.0",
